--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,9 @@
+.text {
+	margin: 0;
+	font-family: "Roboto", sans-serif;
+	font-style: normal;
+}
+
 .header {
 	height: 261px;
 	background: linear-gradient(
@@ -10,11 +16,30 @@
 		rgba(6, 77, 142, 0.447917) 102.03%,
 		rgba(1, 0, 60, 0) 102.73%
 	);
+	padding-left: calc(50% - 720px);
+	padding-right: calc(50% - 720px);
+}
+
+.header__center {
+	width: 1440;
+	position: relative;
 }
 
 .header__label {
-	padding-left: calc(50% - 720px);
-	padding-right: calc(50% - 720px);
+	position: absolute;
+	top: 106px;
+	left: 110px;
+	font-weight: bold;
+	font-size: 36px;
+	line-height: 42px;
+	color: white;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.header__image {
+	position: absolute;
+	top: 21px;
+	right: 120px;
 }
 
 .filters {
