--- a/src/App/App.css
+++ b/src/App/App.css
@@ -72,6 +72,21 @@
 	grid-template-areas:
 		"filters sorting"
 		"filters cards-field";
-	background-color: #e5e5e5;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	background-color: #f8f8f8;
+	box-shadow: 0px 4px 12px #e7e7e7;
+	min-height: 100vh;
+}
+
+.footer {
+	height: 96px;
+	background: linear-gradient(
+		267.21deg,
+		#900793 0.16%,
+		rgba(134, 4, 137, 0.785707) 0.16%,
+		rgba(159, 12, 162, 0.762269) 0.16%,
+		rgba(5, 1, 190, 0.734375) 98.91%,
+		rgba(0, 28, 126, 0.619792) 100.15%,
+		rgba(6, 77, 142, 0.447917) 102.03%,
+		rgba(1, 0, 60, 0) 102.73%
+	);
 }
